# bsc

./: CMakeLists.txt  README.md  create_data_file.py  create_fake_data.py  data_utils.py
src/: Component.cpp  Component.h  DNestModel.cpp  DNestModel.h  Data.cpp  Data.h  Gain.cpp  Gain.h  Gains.cpp  Gains.h  LogNormal.cpp  LogNormal.h  MyConditionalPrior.cpp  MyConditionalPrior.h  MyExceptions.h  SkyModel.cpp  SkyModel.h  component_priors.h  gains_gp_hp_priors.h  main.cpp
tests/: simple_test.cpp
